# project-euler

./: .gitignore  Cargo.toml  README.md
benches/: benchmark.rs
src/: euler_1.rs  euler_2.rs  lib.rs  main.rs
