[package]
name = "project-euler"
version = "0.1.0"
authors = ["Farzad FARID <farzy@farzy.org>"]
edition = "2018"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "benchmark"
harness = false
